@@ -1,3 +1,8 @@
+Sun Apr 29 19:01:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/msvc_mpc_auto_compile.pl:
+          Support flat layout
+
 Fri Apr 27 18:43:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/msvc_mpc_auto_compile.pl:
